[package]
name = "pg_bedtools_rs"
version = "0.0.1"
edition = "2021"
authors = ["Liu Shiyu <shencangsheng@126.com>"]
homepage = "https://github.com/shencangsheng/pg_bedtools_rs"
license = "MIT"
repository = "https://github.com/shencangsheng/pg_bedtools_rs"
description = "A PostgreSQL plugin for bedtools, implemented in Rust."


[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg_test = []

[dependencies]
pgrx = "0.11.4"
bedrs = "0.2.25"

[dev-dependencies]
pgrx-tests = "0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
